--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- Music Player -->
     <div class="player-container">
         <div class="album-art-container">
-            <img src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art" class="album-art">
+            <!-- Use a valid image URL here -->
+            <img src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
         </div>
 
         <div class="song-info">
