--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Welcome Screen -->
+    <div id="welcome-screen" class="welcome-screen">
+        <h1>Welcome to VyrizPod</h1>
+        <p>Your ultimate music experience</p>
+        <div class="loader"></div>
+    </div>
+
     <!-- Music Player -->
-    <div class="player-container">
+    <div class="player-container" id="player-container">
         <div class="album-art-container">
-            <!-- Use a valid image URL here -->
+            <!-- Replace the placeholder with your valid album art URL -->
             <img src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
         </div>
 
