--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
         <div class="progress-bar">
             <div class="progress"></div>
         </div>
+
+        <button id="lyricsBtn" class="lyrics-btn">Lyrics</button>
     </div>
 
     <!-- Lyrics Section -->
-    <div class="lyrics-container">
+    <div class="lyrics-container" id="lyrics-container">
         <div id="lyrics" class="lyrics"></div>
     </div>
 
