--- a/index.html
+++ b/index.html
@@ -8,23 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <!-- Background Video -->
+    <div class="video-background">
+        <video autoplay muted loop id="background-video">
+            <source src="your-video-url.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
         <h1>Welcome to VyrizPod</h1>
         <p>Your ultimate music experience</p>
-        <div class="loader"></div>
     </div>
 
     <!-- Music Player -->
     <div class="player-container" id="player-container">
         <div class="album-art-container">
-            <!-- Replace the placeholder with your valid album art URL -->
-            <img src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
+            <img id="album-art" src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
         </div>
 
         <div class="song-info">
-            <h2 class="song-title">Duvidha</h2>
-            <p class="artist-name">Luckee</p>
+            <h2 class="song-title" id="song-title">Duvidha</h2>
+            <p class="artist-name" id="artist-name">Lucke</p>
         </div>
 
         <div class="controls">
@@ -33,23 +40,24 @@
             <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
         </div>
 
-        <div class="progress-bar">
-            <div class="progress"></div>
+        <div class="progress-bar" id="progress-bar">
+            <div class="progress" id="progress"></div>
         </div>
 
-        <button id="lyricsBtn" class="lyrics-btn">Lyrics</button>
-    </div>
+        <!-- Lyrics Button -->
+        <button class="control-button" id="lyricsBtn">Show Lyrics</button>
 
-    <!-- Lyrics Section -->
-    <div class="lyrics-container" id="lyrics-container">
-        <div id="lyrics" class="lyrics"></div>
+        <!-- Lyrics Container -->
+        <div id="lyrics-container" class="lyrics-container">
+            <!-- Lyrics will be injected dynamically via JavaScript -->
+        </div>
     </div>
 
     <!-- Audio Player -->
     <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
 
     <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
 
     <!-- Custom JS -->
     <script src="script.js"></script>
