--- a/index.html
+++ b/index.html
@@ -9,24 +9,18 @@
 </head>
 <body>
 
-    <!-- Background Video -->
-    <div class="video-background">
-        <video autoplay muted loop id="background-video">
-            <source src="your-video-url.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
-        <h1>Welcome to VyrizPod</h1>
-        <p>Your ultimate music experience</p>
+        <div class="welcome-content">
+            <h1>Welcome to VyrizPod</h1>
+            <p>Your ultimate music experience</p>
+        </div>
     </div>
 
     <!-- Music Player -->
-    <div class="player-container" id="player-container">
+    <div id="player-container" class="player-container">
         <div class="album-art-container">
-            <img id="album-art" src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
+            <img id="album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art" class="album-art">
         </div>
 
         <div class="song-info">
@@ -40,16 +34,19 @@
             <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
         </div>
 
-        <div class="progress-bar" id="progress-bar">
-            <div class="progress" id="progress"></div>
+        <div class="progress-bar">
+            <div class="progress"></div>
         </div>
 
         <!-- Lyrics Button -->
-        <button class="control-button" id="lyricsBtn">Show Lyrics</button>
-
-        <!-- Lyrics Container -->
+        <button id="show-lyrics-btn" onclick="toggleLyrics()">Show Lyrics</button>
         <div id="lyrics-container" class="lyrics-container">
-            <!-- Lyrics will be injected dynamically via JavaScript -->
+            <pre id="lyrics">
+                00:00:02,580 --> 00:00:34,380
+                [संगीत]
+                ...
+                <!-- Paste the full lyrics here -->
+            </pre>
         </div>
     </div>
 
