--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
-        <h1>Welcome to VyrizPod</h1>
-        <p>Your ultimate music experience</p>
+        <div class="welcome-content">
+            <h1>Welcome to VyrizPod</h1>
+            <p>Your ultimate music experience</p>
+            <div class="loading-circle"></div>
+        </div>
     </div>
 
     <!-- Music Player -->
-    <div class="player-container" id="player-container" style="display:none;">
+    <div class="player-container" id="player-container" style="display: none;">
         <div class="album-art-container">
-            <img id="album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="album-art">
+            <img id="album-art" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art" class="album-art">
         </div>
 
         <div class="song-info">
@@ -36,8 +41,10 @@
             <div class="progress"></div>
         </div>
 
+        <!-- Lyrics Button -->
         <button id="lyricsBtn" class="lyrics-btn">Show Lyrics</button>
 
+        <!-- Lyrics Section (Hidden by Default) -->
         <div id="lyrics" class="lyrics-section">
             <p id="lyrics-content">Lyrics will appear here...</p>
         </div>
@@ -51,5 +58,7 @@
 
     <!-- Custom JS -->
     <script src="script.js"></script>
+
 </body>
+
 </html>
