--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,45 +7,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
-        <div class="welcome-content">
-            <h1>Welcome to VyrizPod</h1>
-            <p>Your ultimate music experience</p>
-            <div class="loading-circle"></div>
-        </div>
+        <h1>Welcome to VyrizPod</h1>
+        <p>Your ultimate music experience</p>
     </div>
 
     <!-- Music Player -->
-    <div class="player-container" id="player-container" style="display: none;">
+    <div id="player-container" class="player-container">
+        <!-- Album Art -->
         <div class="album-art-container">
-            <img id="album-art" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art" class="album-art">
+            <img id="album-art" src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
         </div>
 
+        <!-- Song Info -->
         <div class="song-info">
             <h2 class="song-title" id="song-title">Duvidha</h2>
             <p class="artist-name" id="artist-name">Lucke</p>
         </div>
 
+        <!-- Controls -->
         <div class="controls">
             <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
             <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
             <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
         </div>
 
+        <!-- Progress Bar -->
         <div class="progress-bar">
-            <div class="progress"></div>
+            <div class="progress" id="progress"></div>
         </div>
 
-        <!-- Lyrics Button -->
-        <button id="lyricsBtn" class="lyrics-btn">Show Lyrics</button>
-
-        <!-- Lyrics Section (Hidden by Default) -->
-        <div id="lyrics" class="lyrics-section">
-            <p id="lyrics-content">Lyrics will appear here...</p>
+        <!-- Lyrics Section -->
+        <button id="showLyricsBtn">Show Lyrics</button>
+        <div id="lyrics" class="lyrics-container">
+            <p id="lyrics-text">Lyrics will appear here...</p>
         </div>
     </div>
 
@@ -60,5 +57,4 @@
     <script src="script.js"></script>
 
 </body>
-
 </html>
