--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
 
     <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
     <!-- Custom JS -->
     <script src="script.js"></script>
