--- a/index.html
+++ b/index.html
@@ -17,43 +17,35 @@
 
     <!-- Music Player -->
     <div id="player-container" class="player-container">
-        <!-- Album Art -->
         <div class="album-art-container">
             <img id="album-art" src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
         </div>
 
-        <!-- Song Info -->
         <div class="song-info">
             <h2 class="song-title" id="song-title">Duvidha</h2>
             <p class="artist-name" id="artist-name">Lucke</p>
         </div>
 
-        <!-- Controls -->
         <div class="controls">
             <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
             <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
             <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
         </div>
 
-        <!-- Progress Bar -->
         <div class="progress-bar">
             <div class="progress" id="progress"></div>
         </div>
 
-        <!-- Lyrics Section -->
         <button id="showLyricsBtn">Show Lyrics</button>
         <div id="lyrics" class="lyrics-container">
             <p id="lyrics-text">Lyrics will appear here...</p>
         </div>
     </div>
 
-    <!-- Audio Player -->
-    <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
+    <audio id="audioPlayer" src="song.mp3"></audio>
 
     <!-- Font Awesome Icons -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-
-    <!-- Custom JS -->
     <script src="script.js"></script>
 
 </body>
