--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <img id="album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="album-art">
         </div>
 
+        <!-- Audio Visualizer -->
+        <canvas id="audio-visualizer"></canvas>
+
         <div class="song-info">
             <h2 class="song-title" id="song-title">Duvidha</h2>
             <p class="artist-name" id="artist-name">Lucke</p>
@@ -34,19 +37,18 @@
         <div class="progress-bar">
             <div class="progress"></div>
         </div>
+        
+        <div class="cd-container">
+            <div class="cd">
+                <div class="cd-inner">
+                    <img id="cd-album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="cd-album-art">
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Audio Player -->
     <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
-
-    <!-- Lyrics Section -->
-    <div id="lyrics-section">
-        <button id="lyricsBtn">Show Lyrics</button>
-        <div id="lyrics" style="display:none;">
-            <!-- Add your lyrics here -->
-            <p>Lyrics will appear here...</p>
-        </div>
-    </div>
 
     <!-- Font Awesome Icons -->
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
