--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         <p>Your ultimate music experience</p>
     </div>
 
+    <!-- Branding -->
+    <div class="branding">
+        <h2>VyrizPod</h2>
+    </div>
+
     <!-- Music Player -->
     <div class="player-container" id="player-container">
         <div class="album-art-container">
             <img id="album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="album-art">
         </div>
-
-        <!-- Audio Visualizer -->
-        <canvas id="audio-visualizer"></canvas>
 
         <div class="song-info">
             <h2 class="song-title" id="song-title">Duvidha</h2>
@@ -36,14 +38,6 @@
 
         <div class="progress-bar">
             <div class="progress"></div>
-        </div>
-        
-        <div class="cd-container">
-            <div class="cd">
-                <div class="cd-inner">
-                    <img id="cd-album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="cd-album-art">
-                </div>
-            </div>
         </div>
     </div>
 
