--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <body>
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
-        <h1>Welcome to VyrizPod</h1>
-        <p>Your ultimate music experience</p>
+        <h1>VyrizPod</h1>
     </div>
 
-    <!-- Branding -->
-    <div class="branding">
-        <h2>VyrizPod</h2>
+    <!-- Slogan Screen -->
+    <div id="slogan-screen" class="slogan-screen">
+        <p>Your ultimate music experience</p>
     </div>
 
     <!-- Music Player -->
