--- a/index.html
+++ b/index.html
@@ -3,44 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VyrizPod - Music Player</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <!-- Font Awesome Icons -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <title>VyrizPod</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <!-- Welcome Screen -->
-    <div id="welcome-screen" class="welcome-screen">
-        <h1>VyrizPod</h1>
+    <div class="welcome-screen" id="welcomeScreen">
+        <h1>Welcome to VyrizPod</h1>
+        <p>Your ultimate music experience</p>
     </div>
 
     <!-- Music Player -->
-    <div class="player-container" id="player-container">
-        <div class="album-art-container">
-            <img id="album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="album-art">
+    <div class="music-player" id="musicPlayer">
+        <div class="album-art">
+            <img id="albumArt" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Bumpy%20Ride%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art">
         </div>
-
         <div class="song-info">
-            <h2 class="song-title" id="song-title">Duvidha</h2>
-            <p class="artist-name" id="artist-name">Lucke</p>
+            <h2 id="songTitle">Bumpy Ride</h2>
+            <p id="artistName">By Mohombi</p>
         </div>
-
+        <audio id="audioPlayer" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Mohombi%20-%20Bumpy%20Ride.mp3"></audio>
         <div class="controls">
-            <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
-            <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
-            <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
-        </div>
-
-        <div class="progress-bar">
-            <div class="progress"></div>
+            <button id="prevBtn"><i class="fas fa-backward"></i></button>
+            <button id="playBtn"><i class="fas fa-play"></i></button>
+            <button id="nextBtn"><i class="fas fa-forward"></i></button>
         </div>
     </div>
-
-    <!-- Audio Player -->
-    <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
-
-    <!-- Custom JS -->
-    <script src="script.js"></script>
 </body>
 </html>
