--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <!-- Music Player -->
     <div class="music-player" id="musicPlayer">
         <div class="album-art">
-            <img id="albumArt" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Bumpy%20Ride%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art">
+            <img id="albumArt" src="" alt="Album Art">
         </div>
         <div class="song-info">
-            <h2 id="songTitle">Bumpy Ride</h2>
-            <p id="artistName">By Mohombi</p>
+            <h2 id="songTitle"></h2>
+            <p id="artistName"></p>
         </div>
-        <audio id="audioPlayer" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Mohombi%20-%20Bumpy%20Ride.mp3"></audio>
+        <audio id="audioPlayer"></audio>
         <div class="controls">
             <button id="prevBtn"><i class="fas fa-backward"></i></button>
             <button id="playBtn"><i class="fas fa-play"></i></button>
