--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
         <audio id="audioPlayer"></audio>
         <div class="controls">
-            <button id="prevBtn"><i class="fas fa-backward"></i></button>
-            <button id="playBtn"><i class="fas fa-play"></i></button>
-            <button id="nextBtn"><i class="fas fa-forward"></i></button>
+            <button id="prevBtn" class="control-btn"><i class="fas fa-backward"></i></button>
+            <button id="playBtn" class="control-btn"><i class="fas fa-play"></i></button>
+            <button id="nextBtn" class="control-btn"><i class="fas fa-forward"></i></button>
         </div>
     </div>
 </body>
