--- a/index.html
+++ b/index.html
@@ -3,106 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VyrizPod</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <script defer src="script.js"></script>
+    <title>VyrizPod - Music Player</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Welcome Screen -->
-    <div class="welcome-screen" id="welcomeScreen">
-        <h1>Welcome to VyrizPod</h1>
+    <div id="welcome-screen" class="welcome-screen">
+        <h1>VyrizPod</h1>
         <p>Your ultimate music experience</p>
     </div>
 
     <!-- Music Player -->
-    <div class="music-player" id="musicPlayer">
-        <div class="album-art">
-            <img id="albumArt" src="" alt="Album Art">
+    <div class="player-container" id="player-container">
+        <div class="album-art-container">
+            <img id="album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="album-art">
         </div>
+
         <div class="song-info">
-            <h2 id="songTitle"></h2>
-            <p id="artistName"></p>
+            <h2 class="song-title" id="song-title">Duvidha</h2>
+            <p class="artist-name" id="artist-name">Lucke</p>
         </div>
-        <audio id="audioPlayer"></audio>
+
         <div class="controls">
-            <button id="prevBtn" class="control-btn"><i class="fas fa-backward"></i></button>
-            <button id="playBtn" class="control-btn"><i class="fas fa-play"></i></button>
-            <button id="nextBtn" class="control-btn"><i class="fas fa-forward"></i></button>
+            <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
+            <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
+            <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
+        </div>
+
+        <div class="progress-bar">
+            <div class="progress"></div>
         </div>
     </div>
 
-    <script>
-        // Song Data
-        const songs = [
-            {
-                title: "Duvidha",
-                artist: "Unknown",
-                audioSrc: "https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.mp3",
-                albumArt: "https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg"
-            }
-        ];
+    <!-- Audio Player -->
+    <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
 
-        let currentSongIndex = 0;
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
 
-        // DOM Elements
-        const welcomeScreen = document.getElementById('welcomeScreen');
-        const musicPlayer = document.getElementById('musicPlayer');
-        const audioPlayer = document.getElementById('audioPlayer');
-        const albumArt = document.getElementById('albumArt');
-        const songTitle = document.getElementById('songTitle');
-        const artistName = document.getElementById('artistName');
-        const playBtn = document.getElementById('playBtn');
-        const prevBtn = document.getElementById('prevBtn');
-        const nextBtn = document.getElementById('nextBtn');
-
-        let isPlaying = false;
-
-        // Welcome Screen Fade-Out
-        setTimeout(() => {
-            welcomeScreen.style.display = 'none';
-            musicPlayer.style.display = 'block';
-            loadSong(currentSongIndex);
-        }, 3000);
-
-        // Load Song
-        function loadSong(index) {
-            const song = songs[index];
-            audioPlayer.src = song.audioSrc;
-            albumArt.src = song.albumArt;
-            songTitle.textContent = song.title;
-            artistName.textContent = song.artist;
-        }
-
-        // Play and Pause Functionality
-        playBtn.addEventListener('click', () => {
-            if (isPlaying) {
-                audioPlayer.pause();
-                playBtn.innerHTML = '<i class="fas fa-play"></i>';
-            } else {
-                audioPlayer.play();
-                playBtn.innerHTML = '<i class="fas fa-pause"></i>';
-            }
-            isPlaying = !isPlaying;
-        });
-
-        // Next Song
-        nextBtn.addEventListener('click', () => {
-            currentSongIndex = (currentSongIndex + 1) % songs.length;
-            loadSong(currentSongIndex);
-            if (isPlaying) {
-                audioPlayer.play();
-            }
-        });
-
-        // Previous Song
-        prevBtn.addEventListener('click', () => {
-            currentSongIndex = (currentSongIndex - 1 + songs.length) % songs.length;
-            loadSong(currentSongIndex);
-            if (isPlaying) {
-                audioPlayer.play();
-            }
-        });
-    </script>
+    <!-- Custom JS -->
+    <script src="script.js"></script>
 </body>
 </html>
