--- a/index.html
+++ b/index.html
@@ -6,41 +6,41 @@
     <title>VyrizPod - Music Player</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <!-- Font Awesome Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
         <h1>VyrizPod</h1>
     </div>
 
-    <!-- Music Player -->
-    <div class="player-container" id="player-container">
-        <div class="album-art-container">
-            <img id="album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="album-art">
+    <div id="main-content" style="display: none;"> <div class="search-bar">
+            <input type="text" id="searchInput" placeholder="Search for songs...">
+            <button id="searchButton">Search</button>
         </div>
 
-        <div class="song-info">
-            <h2 class="song-title" id="song-title">Duvidha</h2>
-            <p class="artist-name" id="artist-name">Lucke</p>
-        </div>
+        <div id="song-list">
+            </div>
 
-        <div class="controls">
-            <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
-            <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
-            <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
+        <div class="player-container" id="player-container">
+            <div class="album-art-container">
+                <img id="album-art" src="" alt="Album Art" class="album-art">
+            </div>
+            <div class="song-info">
+                <h2 class="song-title" id="song-title"></h2>
+                <p class="artist-name" id="artist-name"></p>
+            </div>
+            <div class="controls">
+                <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
+                <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
+                <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
+            </div>
+            <div class="progress-bar">
+                <div class="progress"></div>
+            </div>
         </div>
-
-        <div class="progress-bar">
-            <div class="progress"></div>
-        </div>
+        <audio id="audioPlayer"></audio>
     </div>
 
-    <!-- Audio Player -->
-    <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
-
-    <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
 </html>
