--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <h1>VyrizPod</h1>
     </div>
 
-    <div id="main-content" style="display: none;"> <div class="search-bar">
+    <div id="main-content" style="display: none;">
+        <div class="search-bar">
             <input type="text" id="searchInput" placeholder="Search for songs...">
             <button id="searchButton">Search</button>
         </div>
 
-        <div id="song-list">
-            </div>
+        <div id="song-list"></div>
 
         <div class="player-container" id="player-container">
             <div class="album-art-container">
