--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
-        <h1>VyrizPod</h1>
+        <div class="welcome-content">
+            <h1>Welcome to VyrizPod</h1>
+            <p>Enjoy your music journey</p>
+        </div>
     </div>
 
     <!-- Music Player -->
