--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 <body>
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
-        <div class="welcome-content">
-            <h1>Welcome to VyrizPod</h1>
-            <p>Enjoy your music journey</p>
-        </div>
+        <h1>VyrizPod</h1>
+    </div>
+
+    <!-- Homepage with Songs List -->
+    <div id="songs-list" class="songs-list">
+        <h2>All Songs</h2>
+        <div id="song-items" class="song-items"></div>
     </div>
 
     <!-- Music Player -->
     <div class="player-container" id="player-container">
         <div class="album-art-container">
-            <img id="album-art" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="album-art">
+            <img id="album-art" src="" alt="Album Art" class="album-art">
         </div>
 
         <div class="song-info">
@@ -41,7 +44,7 @@
     </div>
 
     <!-- Audio Player -->
-    <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
+    <audio id="audioPlayer"></audio>
 
     <!-- Custom JS -->
     <script src="script.js"></script>
