--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="song-items" class="song-items"></div>
     </div>
 
-    <!-- Music Player -->
+    <!-- Music Player (Initially Hidden) -->
     <div class="player-container" id="player-container">
         <div class="album-art-container">
             <img id="album-art" src="" alt="Album Art" class="album-art">
