--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>VyrizPod - Music Player</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <!-- Font Awesome Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -15,18 +14,20 @@
         <h1>VyrizPod</h1>
     </div>
 
+    <!-- Search Bar -->
+    <div id="search-bar" class="search-bar">
+        <input type="text" id="search-input" placeholder="Search for songs..." class="search-input">
+        <button id="search-btn" class="search-btn"><i class="fas fa-search"></i></button>
+    </div>
+
     <!-- Homepage with Songs List -->
     <div id="songs-list" class="songs-list">
         <h2>All Songs</h2>
         <div id="song-items" class="song-items"></div>
     </div>
 
-    <!-- Music Player (Initially Hidden) -->
+    <!-- Music Player -->
     <div class="player-container" id="player-container">
-        <div class="album-art-container">
-            <img id="album-art" src="" alt="Album Art" class="album-art">
-        </div>
-
         <div class="song-info">
             <h2 class="song-title" id="song-title">Duvidha</h2>
             <p class="artist-name" id="artist-name">Lucke</p>
