--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Search Bar -->
-    <div id="search-bar" class="search-bar">
+    <div id="search-bar" class="search-bar" style="display: none;">
         <input type="text" id="search-input" placeholder="Search for songs..." class="search-input">
         <button id="search-btn" class="search-btn"><i class="fas fa-search"></i></button>
     </div>
