--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     <!-- Music Player -->
     <div class="player-container" id="player-container">
         <div class="song-info">
-            <h2 class="song-title" id="song-title">Duvidha</h2>
-            <p class="artist-name" id="artist-name">Lucke</p>
+            <img id="album-art" src="" alt="Album Art">
+            <div>
+                <h2 class="song-title" id="song-title">Duvidha</h2>
+                <p class="artist-name" id="artist-name">Lucke</p>
+            </div>
         </div>
 
         <div class="controls">
