--- a/index.html
+++ b/index.html
@@ -3,51 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VyrizPod - Music Player</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <title>Music Player</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+
     <!-- Welcome Screen -->
-    <div id="welcome-screen" class="welcome-screen">
-        <h1>VyrizPod</h1>
+    <div id="welcome-screen">
+        <h1>Welcome to My Music Platform</h1>
     </div>
 
-    <!-- Search Bar -->
-    <div id="search-bar" class="search-bar">
-        <input type="text" id="search-input" placeholder="Search for songs..." class="search-input">
-        <button id="search-btn" class="search-btn"><i class="fas fa-search"></i></button>
-    </div>
-
-    <!-- Homepage with Songs List -->
-    <div id="songs-list" class="songs-list">
-        <h2>All Songs</h2>
-        <div id="song-items" class="song-items"></div>
-    </div>
-
-    <!-- Music Player -->
-    <div class="player-container" id="player-container">
-        <div class="song-info">
-            <h2 class="song-title" id="song-title">Duvidha</h2>
-            <p class="artist-name" id="artist-name">Lucke</p>
+    <!-- Player Container -->
+    <div id="player-container" style="display: none;">
+        <div id="song-info">
+            <h2 id="song-title">Song Title</h2>
+            <p id="artist-name">Artist Name</p>
         </div>
 
-        <div class="controls">
-            <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
-            <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
-            <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
+        <audio id="audioPlayer" controls>
+            <source id="audioSource" src="" type="audio/mp3">
+        </audio>
+
+        <div id="progress-container">
+            <span id="current-time">0:00</span> <!-- Current Time -->
+            <div class="progress-bar" onclick="setProgress(event)"></div>
+            <span id="remaining-time">3:30</span> <!-- Remaining Time -->
         </div>
 
-        <div class="progress-bar">
-            <div class="progress"></div>
+        <div id="controls">
+            <button id="prevBtn">Previous</button>
+            <button id="playBtn"><i class="fas fa-play"></i></button>
+            <button id="nextBtn">Next</button>
         </div>
     </div>
 
-    <!-- Audio Player -->
-    <audio id="audioPlayer"></audio>
+    <!-- Song List -->
+    <div id="songs-list" style="display: none;">
+        <input type="text" id="search-input" placeholder="Search for a song...">
+        <button id="search-btn">Search</button>
 
-    <!-- Custom JS -->
+        <div id="song-items">
+            <!-- Song items will be dynamically displayed here -->
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
