--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- Music Player -->
     <div class="player-container" id="player-container">
         <div class="song-info">
-            <h2 class="song-title" id="song-title">Duvidha</h2>
-            <p class="artist-name" id="artist-name">Lucke</p>
+            <h2 class="song-title" id="song-title">Song Title</h2>
+            <p class="artist-name" id="artist-name">Artist Name</p>
         </div>
 
         <div class="controls">
