--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- Music Player -->
     <div class="player-container" id="player-container">
         <div class="song-info">
-            <h2 class="song-title" id="song-title">Song Title</h2>
-            <p class="artist-name" id="artist-name">Artist Name</p>
+            <h2 class="song-title" id="song-title">Duvidha</h2>
+            <p class="artist-name" id="artist-name">Lucke</p>
         </div>
 
         <div class="controls">
@@ -42,6 +42,11 @@
         <div class="progress-bar">
             <div class="progress"></div>
         </div>
+
+        <!-- Volume Control -->
+        <div class="volume-control">
+            <input type="range" id="volume-control" min="0" max="100" value="100">
+        </div>
     </div>
 
     <!-- Audio Player -->
@@ -51,4 +56,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
