--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
             <div class="progress"></div>
         </div>
 
-        <!-- Volume Control -->
-        <div class="volume-control">
-            <input type="range" id="volume-control" min="0" max="100" value="100">
-        </div>
+        <input type="range" id="volume-control" min="0" max="100" value="100" />
     </div>
 
     <!-- Audio Player -->
