--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="player-container">
+    <!-- Welcome Screen -->
+    <div id="welcome-screen">
+        <h1>Welcome to My Music Player!</h1>
+        <p>Loading your favorite tunes...</p>
+    </div>
+
+    <!-- Music Player -->
+    <div id="player-container" class="hidden">
         <!-- Song Details -->
         <div id="song-details">
             <h2 id="song-title">Song Title</h2>
