--- a/index.html
+++ b/index.html
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music App</title>
-  <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VyrizPod - Music Player</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-  <div id="welcome-screen" class="welcome-screen">
-    <h1>Welcome to Music App</h1>
-    <button onclick="enterApp()">Enter</button>
-  </div>
-
-  <div id="main-app" class="hidden">
-    <button id="darkModeToggle" onclick="toggleDarkMode()">Dark Mode</button>
-
-    <div id="search-bar" class="hidden">
-      <input type="text" id="search" placeholder="Search songs..." oninput="searchSongs()">
+    <!-- Welcome Screen -->
+    <div id="welcome-screen" class="welcome-screen">
+        <h1>VyrizPod</h1>
+        <p>Loading your favorite songs...</p>
     </div>
 
-    <h1>All Songs</h1>
-
-    <div id="songs-list">
-      <!-- Song list will load dynamically -->
+    <!-- Search Bar -->
+    <div id="search-bar" class="search-bar">
+        <input type="text" id="search-input" placeholder="Search for songs..." class="search-input">
+        <button id="search-btn" class="search-btn"><i class="fas fa-search"></i></button>
     </div>
 
-    <div id="player">
-      <h2 id="current-song-title">Select a song</h2>
-      <audio id="audio-player" controls></audio>
+    <!-- Homepage with Songs List -->
+    <div id="songs-list" class="songs-list">
+        <h2>All Songs</h2>
+        <div id="song-items" class="song-items"></div>
     </div>
-  </div>
 
-  <script src="../js/script.js"></script>
+    <!-- Music Player -->
+    <div class="player-container" id="player-container">
+        <div class="song-info">
+            <h2 class="song-title" id="song-title">Duvidha</h2>
+            <p class="artist-name" id="artist-name">Lucke</p>
+        </div>
+
+        <div class="controls">
+            <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
+            <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
+            <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
+        </div>
+
+        <div class="progress-bar">
+            <div class="progress"></div>
+        </div>
+    </div>
+
+    <!-- Audio Player -->
+    <audio id="audioPlayer"></audio>
+
+    <!-- Custom JS -->
+    <script src="script.js"></script>
 </body>
 </html>
