--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
         <h1>VyrizPod</h1>
-        <p>Loading your favorite songs...</p>
     </div>
 
     <!-- Search Bar -->
@@ -42,6 +41,11 @@
 
         <div class="progress-bar">
             <div class="progress"></div>
+        </div>
+
+        <!-- Volume Control -->
+        <div class="volume-control">
+            <input type="range" id="volume-control" min="0" max="100" value="100">
         </div>
     </div>
 
